--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./select.css" />
   </head>
   <body>
     <main class="container">
@@ -29,24 +30,265 @@
       </div>
 
       <div class="my-3 p-3 bg-body rounded shadow-sm">
-        <div
-          style="
-            display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-            justify-content: flex-start;
-          "
-        >
-          <input data-id=""
-            id="country"
+        <div class="selectBox">
+          <input
+            id="nklist"
             type="text"
             class="form-control"
-            placeholder="Country Name"
+            onfocus="Nk.show()"
           />
-          <div id="selectedList"></div>
+          <div id="selectedList">
+            <ul>
+              <li onclick="Nk.s(this)" value="Afganistan">Afghanistan</li>
+              <li onclick="Nk.s(this)" value="Albania">Albania</li>
+              <li onclick="Nk.s(this)" value="Algeria">Algeria</li>
+              <li onclick="Nk.s(this)" value="American Samoa">American Samoa</li>
+              <li onclick="Nk.s(this)" value="Andorra">Andorra</li>
+              <li onclick="Nk.s(this)" value="Angola">Angola</li>
+              <li onclick="Nk.s(this)" value="Anguilla">Anguilla</li>
+              <li onclick="Nk.s(this)" value="Antigua & Barbuda">Antigua & Barbuda</li>
+              <li onclick="Nk.s(this)" value="Argentina">Argentina</li>
+              <li onclick="Nk.s(this)" value="Armenia">Armenia</li>
+              <li onclick="Nk.s(this)" value="Aruba">Aruba</li>
+              <li onclick="Nk.s(this)" value="Australia">Australia</li>
+              <li onclick="Nk.s(this)" value="Austria">Austria</li>
+              <li onclick="Nk.s(this)" value="Azerbaijan">Azerbaijan</li>
+              <li onclick="Nk.s(this)" value="Bahamas">Bahamas</li>
+              <li onclick="Nk.s(this)" value="Bahrain">Bahrain</li>
+              <li onclick="Nk.s(this)" value="Bangladesh">Bangladesh</li>
+              <li onclick="Nk.s(this)" value="Barbados">Barbados</li>
+              <li onclick="Nk.s(this)" value="Belarus">Belarus</li>
+              <li onclick="Nk.s(this)" value="Belgium">Belgium</li>
+              <li onclick="Nk.s(this)" value="Belize">Belize</li>
+              <li onclick="Nk.s(this)" value="Benin">Benin</li>
+              <li onclick="Nk.s(this)" value="Bermuda">Bermuda</li>
+              <li onclick="Nk.s(this)" value="Bhutan">Bhutan</li>
+              <li onclick="Nk.s(this)" value="Bolivia">Bolivia</li>
+              <li onclick="Nk.s(this)" value="Bonaire">Bonaire</li>
+              <li onclick="Nk.s(this)" value="Bosnia & Herzegovina">Bosnia & Herzegovina</li>
+              <li onclick="Nk.s(this)" value="Botswana">Botswana</li>
+              <li onclick="Nk.s(this)" value="Brazil">Brazil</li>
+              <li onclick="Nk.s(this)" value="British Indian Ocean Ter">British Indian Ocean Ter</li>
+              <li onclick="Nk.s(this)" value="Brunei">Brunei</li>
+              <li onclick="Nk.s(this)" value="Bulgaria">Bulgaria</li>
+              <li onclick="Nk.s(this)" value="Burkina Faso">Burkina Faso</li>
+              <li onclick="Nk.s(this)" value="Burundi">Burundi</li>
+              <li onclick="Nk.s(this)" value="Cambodia">Cambodia</li>
+              <li onclick="Nk.s(this)" value="Cameroon">Cameroon</li>
+              <li onclick="Nk.s(this)" value="Canada">Canada</li>
+              <li onclick="Nk.s(this)" value="Canary Islands">Canary Islands</li>
+              <li onclick="Nk.s(this)" value="Cape Verde">Cape Verde</li>
+              <li onclick="Nk.s(this)" value="Cayman Islands">Cayman Islands</li>
+              <li onclick="Nk.s(this)" value="Central African Republic">Central African Republic</li>
+              <li onclick="Nk.s(this)" value="Chad">Chad</li>
+              <li onclick="Nk.s(this)" value="Channel Islands">Channel Islands</li>
+              <li onclick="Nk.s(this)" value="Chile">Chile</li>
+              <li onclick="Nk.s(this)" value="China">China</li>
+              <li onclick="Nk.s(this)" value="Christmas Island">Christmas Island</li>
+              <li onclick="Nk.s(this)" value="Cocos Island">Cocos Island</li>
+              <li onclick="Nk.s(this)" value="Colombia">Colombia</li>
+              <li onclick="Nk.s(this)" value="Comoros">Comoros</li>
+              <li onclick="Nk.s(this)" value="Congo">Congo</li>
+              <li onclick="Nk.s(this)" value="Cook Islands">Cook Islands</li>
+              <li onclick="Nk.s(this)" value="Costa Rica">Costa Rica</li>
+              <li onclick="Nk.s(this)" value="Cote DIvoire">Cote DIvoire</li>
+              <li onclick="Nk.s(this)" value="Croatia">Croatia</li>
+              <li onclick="Nk.s(this)" value="Cuba">Cuba</li>
+              <li onclick="Nk.s(this)" value="Curaco">Curacao</li>
+              <li onclick="Nk.s(this)" value="Cyprus">Cyprus</li>
+              <li onclick="Nk.s(this)" value="Czech Republic">Czech Republic</li>
+              <li onclick="Nk.s(this)" value="Denmark">Denmark</li>
+              <li onclick="Nk.s(this)" value="Djibouti">Djibouti</li>
+              <li onclick="Nk.s(this)" value="Dominica">Dominica</li>
+              <li onclick="Nk.s(this)" value="Dominican Republic">Dominican Republic</li>
+              <li onclick="Nk.s(this)" value="East Timor">East Timor</li>
+              <li onclick="Nk.s(this)" value="Ecuador">Ecuador</li>
+              <li onclick="Nk.s(this)" value="Egypt">Egypt</li>
+              <li onclick="Nk.s(this)" value="El Salvador">El Salvador</li>
+              <li onclick="Nk.s(this)" value="Equatorial Guinea">Equatorial Guinea</li>
+              <li onclick="Nk.s(this)" value="Eritrea">Eritrea</li>
+              <li onclick="Nk.s(this)" value="Estonia">Estonia</li>
+              <li onclick="Nk.s(this)" value="Ethiopia">Ethiopia</li>
+              <li onclick="Nk.s(this)" value="Falkland Islands">Falkland Islands</li>
+              <li onclick="Nk.s(this)" value="Faroe Islands">Faroe Islands</li>
+              <li onclick="Nk.s(this)" value="Fiji">Fiji</li>
+              <li onclick="Nk.s(this)" value="Finland">Finland</li>
+              <li onclick="Nk.s(this)" value="France">France</li>
+              <li onclick="Nk.s(this)" value="French Guiana">French Guiana</li>
+              <li onclick="Nk.s(this)" value="French Polynesia">French Polynesia</li>
+              <li onclick="Nk.s(this)" value="French Southern Ter">French Southern Ter</li>
+              <li onclick="Nk.s(this)" value="Gabon">Gabon</li>
+              <li onclick="Nk.s(this)" value="Gambia">Gambia</li>
+              <li onclick="Nk.s(this)" value="Georgia">Georgia</li>
+              <li onclick="Nk.s(this)" value="Germany">Germany</li>
+              <li onclick="Nk.s(this)" value="Ghana">Ghana</li>
+              <li onclick="Nk.s(this)" value="Gibraltar">Gibraltar</li>
+              <li onclick="Nk.s(this)" value="Great Britain">Great Britain</li>
+              <li onclick="Nk.s(this)" value="Greece">Greece</li>
+              <li onclick="Nk.s(this)" value="Greenland">Greenland</li>
+              <li onclick="Nk.s(this)" value="Grenada">Grenada</li>
+              <li onclick="Nk.s(this)" value="Guadeloupe">Guadeloupe</li>
+              <li onclick="Nk.s(this)" value="Guam">Guam</li>
+              <li onclick="Nk.s(this)" value="Guatemala">Guatemala</li>
+              <li onclick="Nk.s(this)" value="Guinea">Guinea</li>
+              <li onclick="Nk.s(this)" value="Guyana">Guyana</li>
+              <li onclick="Nk.s(this)" value="Haiti">Haiti</li>
+              <li onclick="Nk.s(this)" value="Hawaii">Hawaii</li>
+              <li onclick="Nk.s(this)" value="Honduras">Honduras</li>
+              <li onclick="Nk.s(this)" value="Hong Kong">Hong Kong</li>
+              <li onclick="Nk.s(this)" value="Hungary">Hungary</li>
+              <li onclick="Nk.s(this)" value="Iceland">Iceland</li>
+              <li onclick="Nk.s(this)" value="Indonesia">Indonesia</li>
+              <li onclick="Nk.s(this)" value="India">India</li>
+              <li onclick="Nk.s(this)" value="Iran">Iran</li>
+              <li onclick="Nk.s(this)" value="Iraq">Iraq</li>
+              <li onclick="Nk.s(this)" value="Ireland">Ireland</li>
+              <li onclick="Nk.s(this)" value="Isle of Man">Isle of Man</li>
+              <li onclick="Nk.s(this)" value="Israel">Israel</li>
+              <li onclick="Nk.s(this)" value="Italy">Italy</li>
+              <li onclick="Nk.s(this)" value="Jamaica">Jamaica</li>
+              <li onclick="Nk.s(this)" value="Japan">Japan</li>
+              <li onclick="Nk.s(this)" value="Jordan">Jordan</li>
+              <li onclick="Nk.s(this)" value="Kazakhstan">Kazakhstan</li>
+              <li onclick="Nk.s(this)" value="Kenya">Kenya</li>
+              <li onclick="Nk.s(this)" value="Kiribati">Kiribati</li>
+              <li onclick="Nk.s(this)" value="Korea North">Korea North</li>
+              <li onclick="Nk.s(this)" value="Korea Sout">Korea South</li>
+              <li onclick="Nk.s(this)" value="Kuwait">Kuwait</li>
+              <li onclick="Nk.s(this)" value="Kyrgyzstan">Kyrgyzstan</li>
+              <li onclick="Nk.s(this)" value="Laos">Laos</li>
+              <li onclick="Nk.s(this)" value="Latvia">Latvia</li>
+              <li onclick="Nk.s(this)" value="Lebanon">Lebanon</li>
+              <li onclick="Nk.s(this)" value="Lesotho">Lesotho</li>
+              <li onclick="Nk.s(this)" value="Liberia">Liberia</li>
+              <li onclick="Nk.s(this)" value="Libya">Libya</li>
+              <li onclick="Nk.s(this)" value="Liechtenstein">Liechtenstein</li>
+              <li onclick="Nk.s(this)" value="Lithuania">Lithuania</li>
+              <li onclick="Nk.s(this)" value="Luxembourg">Luxembourg</li>
+              <li onclick="Nk.s(this)" value="Macau">Macau</li>
+              <li onclick="Nk.s(this)" value="Macedonia">Macedonia</li>
+              <li onclick="Nk.s(this)" value="Madagascar">Madagascar</li>
+              <li onclick="Nk.s(this)" value="Malaysia">Malaysia</li>
+              <li onclick="Nk.s(this)" value="Malawi">Malawi</li>
+              <li onclick="Nk.s(this)" value="Maldives">Maldives</li>
+              <li onclick="Nk.s(this)" value="Mali">Mali</li>
+              <li onclick="Nk.s(this)" value="Malta">Malta</li>
+              <li onclick="Nk.s(this)" value="Marshall Islands">Marshall Islands</li>
+              <li onclick="Nk.s(this)" value="Martinique">Martinique</li>
+              <li onclick="Nk.s(this)" value="Mauritania">Mauritania</li>
+              <li onclick="Nk.s(this)" value="Mauritius">Mauritius</li>
+              <li onclick="Nk.s(this)" value="Mayotte">Mayotte</li>
+              <li onclick="Nk.s(this)" value="Mexico">Mexico</li>
+              <li onclick="Nk.s(this)" value="Midway Islands">Midway Islands</li>
+              <li onclick="Nk.s(this)" value="Moldova">Moldova</li>
+              <li onclick="Nk.s(this)" value="Monaco">Monaco</li>
+              <li onclick="Nk.s(this)" value="Mongolia">Mongolia</li>
+              <li onclick="Nk.s(this)" value="Montserrat">Montserrat</li>
+              <li onclick="Nk.s(this)" value="Morocco">Morocco</li>
+              <li onclick="Nk.s(this)" value="Mozambique">Mozambique</li>
+              <li onclick="Nk.s(this)" value="Myanmar">Myanmar</li>
+              <li onclick="Nk.s(this)" value="Nambia">Nambia</li>
+              <li onclick="Nk.s(this)" value="Nauru">Nauru</li>
+              <li onclick="Nk.s(this)" value="Nepal">Nepal</li>
+              <li onclick="Nk.s(this)" value="Netherland Antilles">Netherland Antilles</li>
+              <li onclick="Nk.s(this)" value="Netherlands">Netherlands (Holland, Europe)</li>
+              <li onclick="Nk.s(this)" value="Nevis">Nevis</li>
+              <li onclick="Nk.s(this)" value="New Caledonia">New Caledonia</li>
+              <li onclick="Nk.s(this)" value="New Zealand">New Zealand</li>
+              <li onclick="Nk.s(this)" value="Nicaragua">Nicaragua</li>
+              <li onclick="Nk.s(this)" value="Niger">Niger</li>
+              <li onclick="Nk.s(this)" value="Nigeria">Nigeria</li>
+              <li onclick="Nk.s(this)" value="Niue">Niue</li>
+              <li onclick="Nk.s(this)" value="Norfolk Island">Norfolk Island</li>
+              <li onclick="Nk.s(this)" value="Norway">Norway</li>
+              <li onclick="Nk.s(this)" value="Oman">Oman</li>
+              <li onclick="Nk.s(this)" value="Pakistan">Pakistan</li>
+              <li onclick="Nk.s(this)" value="Palau Island">Palau Island</li>
+              <li onclick="Nk.s(this)" value="Palestine">Palestine</li>
+              <li onclick="Nk.s(this)" value="Panama">Panama</li>
+              <li onclick="Nk.s(this)" value="Papua New Guinea">Papua New Guinea</li>
+              <li onclick="Nk.s(this)" value="Paraguay">Paraguay</li>
+              <li onclick="Nk.s(this)" value="Peru">Peru</li>
+              <li onclick="Nk.s(this)" value="Phillipines">Philippines</li>
+              <li onclick="Nk.s(this)" value="Pitcairn Island">Pitcairn Island</li>
+              <li onclick="Nk.s(this)" value="Poland">Poland</li>
+              <li onclick="Nk.s(this)" value="Portugal">Portugal</li>
+              <li onclick="Nk.s(this)" value="Puerto Rico">Puerto Rico</li>
+              <li onclick="Nk.s(this)" value="Qatar">Qatar</li>
+              <li onclick="Nk.s(this)" value="Republic of Montenegro">Republic of Montenegro</li>
+              <li onclick="Nk.s(this)" value="Republic of Serbia">Republic of Serbia</li>
+              <li onclick="Nk.s(this)" value="Reunion">Reunion</li>
+              <li onclick="Nk.s(this)" value="Romania">Romania</li>
+              <li onclick="Nk.s(this)" value="Russia">Russia</li>
+              <li onclick="Nk.s(this)" value="Rwanda">Rwanda</li>
+              <li onclick="Nk.s(this)" value="St Barthelemy">St Barthelemy</li>
+              <li onclick="Nk.s(this)" value="St Eustatius">St Eustatius</li>
+              <li onclick="Nk.s(this)" value="St Helena">St Helena</li>
+              <li onclick="Nk.s(this)" value="St Kitts-Nevis">St Kitts-Nevis</li>
+              <li onclick="Nk.s(this)" value="St Lucia">St Lucia</li>
+              <li onclick="Nk.s(this)" value="St Maarten">St Maarten</li>
+              <li onclick="Nk.s(this)" value="St Pierre & Miquelon">St Pierre & Miquelon</li>
+              <li onclick="Nk.s(this)" value="St Vincent & Grenadines">St Vincent & Grenadines</li>
+              <li onclick="Nk.s(this)" value="Saipan">Saipan</li>
+              <li onclick="Nk.s(this)" value="Samoa">Samoa</li>
+              <li onclick="Nk.s(this)" value="Samoa American">Samoa American</li>
+              <li onclick="Nk.s(this)" value="San Marino">San Marino</li>
+              <li onclick="Nk.s(this)" value="Sao Tome & Principe">Sao Tome & Principe</li>
+              <li onclick="Nk.s(this)" value="Saudi Arabia">Saudi Arabia</li>
+              <li onclick="Nk.s(this)" value="Senegal">Senegal</li>
+              <li onclick="Nk.s(this)" value="Seychelles">Seychelles</li>
+              <li onclick="Nk.s(this)" value="Sierra Leone">Sierra Leone</li>
+              <li onclick="Nk.s(this)" value="Singapore">Singapore</li>
+              <li onclick="Nk.s(this)" value="Slovakia">Slovakia</li>
+              <li onclick="Nk.s(this)" value="Slovenia">Slovenia</li>
+              <li onclick="Nk.s(this)" value="Solomon Islands">Solomon Islands</li>
+              <li onclick="Nk.s(this)" value="Somalia">Somalia</li>
+              <li onclick="Nk.s(this)" value="South Africa">South Africa</li>
+              <li onclick="Nk.s(this)" value="Spain">Spain</li>
+              <li onclick="Nk.s(this)" value="Sri Lanka">Sri Lanka</li>
+              <li onclick="Nk.s(this)" value="Sudan">Sudan</li>
+              <li onclick="Nk.s(this)" value="Suriname">Suriname</li>
+              <li onclick="Nk.s(this)" value="Swaziland">Swaziland</li>
+              <li onclick="Nk.s(this)" value="Sweden">Sweden</li>
+              <li onclick="Nk.s(this)" value="Switzerland">Switzerland</li>
+              <li onclick="Nk.s(this)" value="Syria">Syria</li>
+              <li onclick="Nk.s(this)" value="Tahiti">Tahiti</li>
+              <li onclick="Nk.s(this)" value="Taiwan">Taiwan</li>
+              <li onclick="Nk.s(this)" value="Tajikistan">Tajikistan</li>
+              <li onclick="Nk.s(this)" value="Tanzania">Tanzania</li>
+              <li onclick="Nk.s(this)" value="Thailand">Thailand</li>
+              <li onclick="Nk.s(this)" value="Togo">Togo</li>
+              <li onclick="Nk.s(this)" value="Tokelau">Tokelau</li>
+              <li onclick="Nk.s(this)" value="Tonga">Tonga</li>
+              <li onclick="Nk.s(this)" value="Trinidad & Tobago">Trinidad & Tobago</li>
+              <li onclick="Nk.s(this)" value="Tunisia">Tunisia</li>
+              <li onclick="Nk.s(this)" value="Turkey">Turkey</li>
+              <li onclick="Nk.s(this)" value="Turkmenistan">Turkmenistan</li>
+              <li onclick="Nk.s(this)" value="Turks & Caicos Is">Turks & Caicos Is</li>
+              <li onclick="Nk.s(this)" value="Tuvalu">Tuvalu</li>
+              <li onclick="Nk.s(this)" value="Uganda">Uganda</li>
+              <li onclick="Nk.s(this)" value="United Kingdom">United Kingdom</li>
+              <li onclick="Nk.s(this)" value="Ukraine">Ukraine</li>
+              <li onclick="Nk.s(this)" value="United Arab Erimates">United Arab Emirates</li>
+              <li onclick="Nk.s(this)" value="United States of America">United States of America</li>
+              <li onclick="Nk.s(this)" value="Uraguay">Uruguay</li>
+              <li onclick="Nk.s(this)" value="Uzbekistan">Uzbekistan</li>
+              <li onclick="Nk.s(this)" value="Vanuatu">Vanuatu</li>
+              <li onclick="Nk.s(this)" value="Vatican City State">Vatican City State</li>
+              <li onclick="Nk.s(this)" value="Venezuela">Venezuela</li>
+              <li onclick="Nk.s(this)" value="Vietnam">Vietnam</li>
+              <li onclick="Nk.s(this)" value="Virgin Islands (Brit)">Virgin Islands (Brit)</li>
+              <li onclick="Nk.s(this)" value="Virgin Islands (USA)">Virgin Islands (USA)</li>
+              <li onclick="Nk.s(this)" value="Wake Island">Wake Island</li>
+              <li onclick="Nk.s(this)" value="Wallis & Futana Is">Wallis & Futana Is</li>
+              <li onclick="Nk.s(this)" value="Yemen">Yemen</li>
+              <li onclick="Nk.s(this)" value="Zaire">Zaire</li>
+              <li onclick="Nk.s(this)" value="Zambia">Zambia</li>
+              <li onclick="Nk.s(this)" value="Zimbabwe">Zimbabwe</li>
+            </ul>
+          </div>
         </div>
       </div>
-
     </main>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -58,11 +300,9 @@
     <script src="./select.js"></script>
 
     <script>
-      //call paging onload
-      Netkathir.start({
-        tableId: "#data-table1",
-        getPageSizeFrom: "#pagesize",
-        paginationContainer: "#pagination",
+      Nk.start({
+        selectboxid: "#nklist",
+        placeholder: "Select Country"
       });
     </script>
   </body>
